# wannabet

./: .env.example  .gitignore  README.md  header.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/bets/: page.tsx
app/create/: page.tsx
app/my-bets/: page.tsx
components/: BetsFilters.tsx  bet-card.tsx  bet-settlement-actions.tsx  footer.tsx  handle-badge.tsx  logo.tsx  nav.tsx  solana-provider.tsx
components/ui/: UnifiedSelect.tsx
lib/: anchor.ts  betsCatalog.ts  config.ts  format.ts  prisma.ts  resolver.ts  solana.ts  types.ts
lib/idl/: wannabet_escrow.json
lib/sports/: labels.ts  types.ts  (+1 more)
onchain/wannabet_escrow/: Anchor.toml  Cargo.toml  RESOLVER_RULES.md  package.json
onchain/wannabet_escrow/programs/wannabet_escrow/: Cargo.toml
onchain/wannabet_escrow/programs/wannabet_escrow/src/: lib.rs
onchain/wannabet_escrow/scripts/: claim-void-refund-devnet.mjs  claim-winnings-devnet.mjs  create-crypto-price-bet-devnet.mjs  create-fee-vault-devnet.mjs  dry-run-resolve-crypto-price-bets-devnet.mjs  init-config-devnet.mjs  inspect-bet-devnet.mjs  inspect-config-devnet.mjs  resolve-bet-devnet.mjs  resolve-crypto-price-bet-devnet.mjs  resolve-ready-crypto-price-bets-devnet.mjs  scan-resolvable-bets-devnet.mjs  set-fee-bps-devnet.mjs  set-fee-vault-devnet.mjs  void-bet-devnet.mjs
onchain/wannabet_escrow/scripts/lib/: crypto-price-resolver-devnet.mjs
onchain/wannabet_escrow/tests/: wannabet_escrow.js
prisma/: schema.prisma  seed.ts
scripts/: inspect-devnet-bets.mjs
(+25 files in other folders)
