[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.0" }
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", tag = "v0.33.0" }
cc = { git = "https://github.com/rust-lang/cc-rs", tag = "1.0.94" }